--- a/package.json
+++ b/package.json
@@ -1,19 +1,36 @@
 {
   "devDependencies": {
     "@nomicfoundation/hardhat-network-helpers": "^1.0.8",
-    "@nomicfoundation/hardhat-toolbox": "^2.0.2",
+    "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^1.0.0",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@openzeppelin/hardhat-upgrades": "^1.26.0",
     "ethers": "^5.7.2",
-    "hardhat": "^2.14.0"
+    "hardhat": "^2.16.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.2",
-    "@openzeppelin/contracts-upgradeable": "^4.9.2",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@openzeppelin/contracts": "^4.8.3",
+    "@openzeppelin/contracts-upgradeable": "^4.8.3",
+    "@typechain/ethers-v6": "^0.4.0",
+    "@typechain/hardhat": "^8.0.0",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.2.0",
     "dotenv": "^16.3.1",
+    "hardhat-gas-reporter": "^1.0.8",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.10",
+    "solidity-coverage": "^0.8.1",
+    "ts-node": ">=8.0.0",
+    "typechain": "^8.2.0",
+    "typescript": ">=4.5.0",
     "web3": "^4.0.2"
-  }
+  },
+  "name": "tusima-airdrop-contracts",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/TusimaNetwork/tusima-airdrop-contracts.git",
+  "author": "CornersOfTheCity <18892207018@163.com>",
+  "license": "MIT"
 }
