--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,5 @@
 MNEMONIC=
+ArbitrumOne_END_POINT=
+ALCHEMY_END_POINT=
 
-CHIADO_END_POINT=
-BSCTEST_END_POINT=
-INFURA_END_POINT=
-ZKSTNCTEST_END_POINT=
-
-BSCSCAN_API_KEY=
-ETHSCAN_API_KEY=
-GENOSIS_API_KEY=
+ARBITRUM_API_KEY=
