--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "@types/mocha": "^10.0.1",
+    "bip39": "^3.1.0",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
+    "ethereum-hdwallet": "^0.1.2",
     "hardhat-gas-reporter": "^1.0.8",
     "keccak256": "^1.0.6",
     "merkletreejs": "^0.3.10",
     "node-xlsx": "^0.23.0",
+    "secp256k1": "^5.0.0",
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.2.0",
