--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "merkletreejs": "^0.3.10",
     "node-xlsx": "^0.23.0",
     "secp256k1": "^5.0.0",
+    "simple-git": "^3.19.1",
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.2.0",
