--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tusima-airdrop-merkledata"]
 	path = tusima-airdrop-merkledata
-	url = https://github.com/TusimaNetwork/tusima-airdrop-merkledata.git
+	url = git@github.com:TusimaNetwork/tusima-airdrop-merkledata.git
